--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".review.ReviewFragment">
+
+    <TextView
+        android:textSize="36sp"
+        android:textStyle="bold"
+        android:id="@+id/screen_title_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Review"/>
 
     <ListView
         android:id="@+id/list_view"
@@ -13,4 +22,4 @@
         android:divider="@null"
         android:dividerHeight="10dp" />
 
-</FrameLayout>
+</LinearLayout>
